# sdkwork-iam

./: .env.postgres.example  .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sdkwork.app.config.json  tsconfig.base.json  tsconfig.json  vitest.config.ts
crates/sdkwork-api-iam-assembly/: Cargo.toml  README.md  assembly-manifest.json
crates/sdkwork-api-iam-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-iam-assembly/src/: bootstrap.rs  generated.rs  lib.rs  main.rs
crates/sdkwork-api-iam-assembly/tests/: business_router.rs
crates/sdkwork-iam-bootstrap/: Cargo.toml  README.md
crates/sdkwork-iam-bootstrap/specs/: README.md  component.spec.json
crates/sdkwork-iam-bootstrap/src/: bootstrap_operator.rs  constants.rs  iam_entity_ids.rs  iam_scope_resolver.rs  iam_sql_subject.rs  legacy_subject_repair.rs  lib.rs  limits.rs  oauth_rs256_signing.rs  permission_catalog.rs  rbac_scope.rs  role_catalog.rs  tenant_signing_key.rs
crates/sdkwork-iam-context-service/: Cargo.toml  README.md
crates/sdkwork-iam-context-service/specs/: README.md  component.spec.json
crates/sdkwork-iam-context-service/src/: lib.rs  permission_standard.rs
crates/sdkwork-iam-context-service/tests/: iam_core_standard.rs
crates/sdkwork-iam-database-host/: Cargo.toml  README.md
crates/sdkwork-iam-database-host/specs/: README.md  component.spec.json
crates/sdkwork-iam-database-host/src/: iam_database_module.rs  lib.rs  unified_postgres_env.rs
crates/sdkwork-iam-directory-repository-sqlx/: Cargo.toml  README.md
crates/sdkwork-iam-directory-repository-sqlx/specs/: README.md  component.spec.json
crates/sdkwork-iam-directory-repository-sqlx/src/: lib.rs
crates/sdkwork-iam-directory-repository-sqlx/tests/: iam_storage_standard.rs
crates/sdkwork-iam-embedded-application-bootstrap/: Cargo.toml  README.md
crates/sdkwork-iam-embedded-application-bootstrap/specs/: README.md  component.spec.json
crates/sdkwork-iam-embedded-application-bootstrap/src/: lib.rs  manifest.rs  runtime.rs
crates/sdkwork-iam-gateway-assembly/: Cargo.toml  README.md  assembly-manifest.json
crates/sdkwork-iam-gateway-assembly/specs/: README.md  component.spec.json
crates/sdkwork-iam-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs  main.rs
crates/sdkwork-iam-gateway-assembly/tests/: business_router.rs  infra_routes.rs
crates/sdkwork-iam-module-registry/: Cargo.toml  README.md
crates/sdkwork-iam-module-registry/specs/: README.md  component.spec.json
crates/sdkwork-iam-module-registry/src/: bootstrap_subject.rs  discover.rs  lib.rs  manifest.rs  materialize.rs  merge.rs  validate.rs
crates/sdkwork-iam-rpc-rust/: Cargo.toml  README.md
crates/sdkwork-iam-rpc-rust/specs/: README.md  component.spec.json
crates/sdkwork-iam-rpc-rust/src/: lib.rs
crates/sdkwork-iam-rpc-rust/tests/: iam_rpc_standard.rs
crates/sdkwork-iam-tauri-host/: Cargo.toml  README.md
crates/sdkwork-iam-tauri-host/specs/: README.md  component.spec.json
crates/sdkwork-iam-tauri-host/src/: lib.rs
crates/sdkwork-iam-web-adapter/: Cargo.toml  README.md
crates/sdkwork-iam-web-adapter/specs/: README.md  component.spec.json
crates/sdkwork-iam-web-adapter/src/: access_token_issue.rs  account_binding_policy.rs  api_key_lookup.rs  app_manifest.rs  application_registry.rs  authorization_policy.rs  dev_runtime.rs  embedded_bootstrap.rs  ephemeral_rate_limit.rs  http_responses.rs  iam_audit.rs  iam_database_env.rs  iam_session.rs  lib.rs  messaging_verification.rs  oauth_authorization_server.rs  oauth_integration_exchange.rs  oauth_login_local.rs  oauth_provider_callback.rs  oauth_provider_catalog.rs  oauth_redirect.rs  oauth_token_lookup.rs  production_runtime.rs  resolver.rs  runtime_auth_metadata.rs  service_account_credentials.rs  signing_secrets.rs  super_admin_auth.rs  tenant_signing_key_store.rs
crates/sdkwork-iam-web-adapter/tests/: authorization_policy.rs  open_api_resolver.rs
crates/sdkwork-router-iam-backend-api/: Cargo.toml  README.md
crates/sdkwork-router-iam-backend-api/specs/: README.md  component.spec.json
crates/sdkwork-router-iam-backend-api/src/: directory_crud.impl.rs  handlers.rs  lib.rs  management.rs  manifest.rs  oauth_handlers.impl.rs  oauth_management.rs  operation_permissions.rs  paths.rs  routes.rs  web_bootstrap.rs
crates/sdkwork-router-iam-backend-api/tests/: backend_postgres_bootstrap.rs  iam_backend_postgres_integration.rs  iam_backend_route_standard.rs  unified_database_env.rs
crates/sdkwork-router-iam-open-api/: Cargo.toml  README.md
crates/sdkwork-router-iam-open-api/specs/: README.md  component.spec.json
crates/sdkwork-router-iam-open-api/src/: handlers.rs  lib.rs  manifest.rs  oauth_authorization_handlers.rs  paths.rs  routes.rs  state.rs  web_bootstrap.rs
crates/sdkwork-router-iam-open-api/tests/: iam_open_route_standard.rs
crates/sdkwork-routes-iam-app-api/: Cargo.toml  README.md
crates/sdkwork-routes-iam-app-api/specs/: README.md  component.spec.json
crates/sdkwork-routes-iam-app-api/src/: contacts.rs  directory.rs  ephemeral.rs  ephemeral_pool.rs  handlers.rs  lib.rs  manifest.rs  oauth_login.rs  passwords.rs  paths.rs  responses.rs  routes.rs  sqlite_sessions.rs  state.rs  tokens.rs  utils.rs  web_bootstrap.rs
crates/sdkwork-routes-iam-app-api/tests/: iam_http_standard.rs  iam_local_app_router_test.rs  oauth_authorization_server_integration.rs  unified_database_env.rs
crates/sdkwork-routes-iam-backend-api/: Cargo.toml  README.md
crates/sdkwork-routes-iam-backend-api/specs/: README.md  component.spec.json
crates/sdkwork-routes-iam-backend-api/src/: backend_audit.rs  backend_sql.rs  directory_crud.impl.rs  handlers.rs  lib.rs  management.rs  manifest.rs  oauth_handlers.impl.rs  oauth_management.rs  operation_permissions.rs  routes.rs  service_account_credentials.rs  web_bootstrap.rs
crates/sdkwork-routes-iam-backend-api/tests/: backend_postgres_bootstrap.rs  iam_backend_postgres_integration.rs  iam_backend_route_standard.rs
crates/sdkwork-user-center-tauri-host/: Cargo.toml  README.md
(+327 files in other folders)
