[workspace]
resolver = "2"
members = [
    "crates/sdkwork-iam-database-host",
    "crates/sdkwork-iam-bootstrap",
    "crates/sdkwork-iam-embedded-application-bootstrap",
    "crates/sdkwork-iam-module-registry",
    "crates/sdkwork-iam-web-adapter",
    "crates/sdkwork-iam-context-service",
    "crates/sdkwork-router-iam-app-api",
    "crates/sdkwork-router-iam-backend-api",
    "crates/sdkwork-router-iam-open-api",
    "crates/sdkwork-iam-rpc-rust",
    "crates/sdkwork-iam-directory-repository-sqlx",
    "crates/sdkwork-iam-tauri-host",
    "crates/sdkwork-user-center-tauri-host",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"

[workspace.dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
getrandom = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "sqlite", "chrono"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net", "signal", "sync", "time"] }
tonic = "0.14"
prost-types = "0.14"
tower = { version = "0.5", features = ["util"] }

sdkwork-web-contract = { path = "../sdkwork-web-framework/crates/sdkwork-web-contract" }
sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-web-bootstrap = { path = "../sdkwork-web-framework/crates/sdkwork-web-bootstrap" }
sdkwork-id-core = { path = "../sdkwork-id/crates/sdkwork-id-core" }
sdkwork_rpc_core = { package = "sdkwork-rpc-core-rust", path = "../sdkwork-appbase/crates/sdkwork-rpc-core-rust" }
sdkwork_platform_id_service = { package = "sdkwork-platform-id-service", path = "../sdkwork-appbase/crates/sdkwork-platform-id-service" }
sdkwork_iam_web_adapter = { package = "sdkwork-iam-web-adapter", path = "crates/sdkwork-iam-web-adapter" }
sdkwork_iam_context_service = { package = "sdkwork-iam-context-service", path = "crates/sdkwork-iam-context-service" }
sdkwork_router_iam_app_api = { package = "sdkwork-router-iam-app-api", path = "crates/sdkwork-router-iam-app-api" }
sdkwork_router_iam_backend_api = { package = "sdkwork-router-iam-backend-api", path = "crates/sdkwork-router-iam-backend-api" }
sdkwork_router_iam_open_api = { package = "sdkwork-router-iam-open-api", path = "crates/sdkwork-router-iam-open-api" }
sdkwork_iam_rpc = { package = "sdkwork-iam-rpc-rust", path = "crates/sdkwork-iam-rpc-rust" }
sdkwork_iam_directory_repository_sqlx = { package = "sdkwork-iam-directory-repository-sqlx", path = "crates/sdkwork-iam-directory-repository-sqlx" }
sdkwork_iam_tauri_host = { package = "sdkwork-iam-tauri-host", path = "crates/sdkwork-iam-tauri-host" }
sdkwork_user_center_tauri_host = { package = "sdkwork-user-center-tauri-host", path = "crates/sdkwork-user-center-tauri-host" }
sdkwork_iam_database_host = { package = "sdkwork-iam-database-host", path = "crates/sdkwork-iam-database-host" }
sdkwork_iam_bootstrap = { package = "sdkwork-iam-bootstrap", path = "crates/sdkwork-iam-bootstrap" }
sdkwork_iam_embedded_application_bootstrap = { package = "sdkwork-iam-embedded-application-bootstrap", path = "crates/sdkwork-iam-embedded-application-bootstrap" }
sdkwork_iam_module_registry = { package = "sdkwork-iam-module-registry", path = "crates/sdkwork-iam-module-registry" }
sdkwork_database_config = { package = "sdkwork-database-config", path = "../sdkwork-database/crates/sdkwork-database-config" }
sdkwork_database_lifecycle = { package = "sdkwork-database-lifecycle", path = "../sdkwork-database/crates/sdkwork-database-lifecycle" }
sdkwork_database_drift = { package = "sdkwork-database-drift", path = "../sdkwork-database/crates/sdkwork-database-drift" }
sdkwork_database_spi = { package = "sdkwork-database-spi", path = "../sdkwork-database/crates/sdkwork-database-spi" }
sdkwork_database_sqlx = { package = "sdkwork-database-sqlx", path = "../sdkwork-database/crates/sdkwork-database-sqlx" }
sdkwork_utils_rust = { package = "sdkwork-utils-rust", path = "../sdkwork-utils/packages/sdkwork-utils-rust" }