[package]
name = "sdkwork-iam-bootstrap"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared IAM default subject and permission catalog bootstrap for SDKWork applications."

[lib]
name = "sdkwork_iam_bootstrap"
path = "src/lib.rs"

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
chrono = { workspace = true }
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"
sqlx = { workspace = true }
uuid = { version = "1", features = ["v7"] }
sdkwork-database-id.workspace = true
sdkwork_iam_context_service.workspace = true
sdkwork_iam_module_registry = { workspace = true }
