[package]
name = "sdkwork-iam-directory-repository-sqlx"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SDKWork IAM SQL table catalog and application-root database baseline binding."

[lib]
name = "sdkwork_iam_directory_repository_sqlx"
path = "src/lib.rs"

[dependencies]
sdkwork-database-config = { path = "../../../sdkwork-database/crates/sdkwork-database-config" }
sdkwork_iam_context_service.workspace = true
