[package]
name = "sdkwork-iam-embedded-application-bootstrap"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Embedded IAM tenant application bootstrap from sdkwork.app.config.json."

[lib]
name = "sdkwork_iam_embedded_application_bootstrap"
path = "src/lib.rs"

[dependencies]
sdkwork-database-config = { workspace = true }
sdkwork_iam_bootstrap = { workspace = true }
sdkwork_iam_web_adapter = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
