[package]
name = "sdkwork-iam-gateway-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-iam application HTTP plane."

[lib]
name = "sdkwork_iam_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
sdkwork_routes_iam_app_api = { package = "sdkwork-routes-iam-app-api", path = "../sdkwork-routes-iam-app-api" }
sdkwork_routes_iam_backend_api = { package = "sdkwork-routes-iam-backend-api", path = "../sdkwork-routes-iam-backend-api" }
sdkwork_routes_iam_open_api = { package = "sdkwork-routes-iam-open-api", path = "../sdkwork-routes-iam-open-api" }
