[package]
name = "sdkwork-iam-gateway-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-iam application HTTP plane."

[lib]
name = "sdkwork_iam_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "net", "signal"] }
sdkwork_web_bootstrap = { workspace = true, features = ["sqlx"] }
sdkwork_iam_database_host = { workspace = true }
sdkwork_iam_web_adapter = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
sdkwork_routes_iam_app_api.workspace = true
sdkwork_routes_iam_backend_api.workspace = true
sdkwork_routes_iam_open_api.workspace = true

[dev-dependencies]
tower.workspace = true
