[package]
name = "sdkwork-iam-tauri-host"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SDKWork IAM Tauri host adapter contract for local/private deployments."

[lib]
name = "sdkwork_appbase_tauri_host"
path = "src/lib.rs"

[dependencies]
sdkwork_iam_context_service.workspace = true
sdkwork-web-contract.workspace = true
sdkwork_router_iam_app_api.workspace = true
sdkwork_router_iam_backend_api.workspace = true
