[package]
name = "sdkwork-router-iam-open-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SDKWork IAM open-api route metadata and fail-closed router for Rust local/private deployments."

[lib]
name = "sdkwork_router_iam_open_api"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
serde_json.workspace = true
sdkwork-web-contract.workspace = true
sdkwork-web-core.workspace = true
sdkwork_iam_web_adapter.workspace = true

[dev-dependencies]
http-body-util = "0.1"
tokio.workspace = true
tower.workspace = true
