[package]
name = "sdkwork-routes-iam-app-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SDKWork canonical IAM HTTP route contracts for Rust local/private deployments."

[lib]
name = "sdkwork_routes_iam_app_api"
path = "src/lib.rs"

[dependencies]
argon2 = "0.5"
axum.workspace = true
base64 = "0.22"
chrono.workspace = true
hmac = "0.12"
password-hash = { version = "0.5", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
sqlx.workspace = true
time.workspace = true
tokio.workspace = true
tracing = "0.1"
uuid = { version = "1", features = ["v7"] }
sdkwork_iam_bootstrap.workspace = true
sdkwork-database-config.workspace = true
sdkwork_database_sqlx.workspace = true
sdkwork_iam_database_host.workspace = true
sdkwork_iam_context_service.workspace = true
async-trait.workspace = true
sdkwork_iam_web_adapter.workspace = true
sdkwork-web-contract.workspace = true
sdkwork-web-core.workspace = true
sdkwork-web-axum.workspace = true
sdkwork_utils_rust.workspace = true

[dev-dependencies]
http-body-util = "0.1"
sdkwork-routes-iam-open-api = { path = "../sdkwork-routes-iam-open-api" }
sqlx = { workspace = true, features = ["sqlite"] }
tokio.workspace = true
tower.workspace = true
