[package]
name = "sdkwork-user-center-tauri-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
argon2 = "0.5"
axum = { version = "0.8", default-features = false }
base64 = "0.22"
hmac = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
sdkwork-database-id = { workspace = true }
time.workspace = true
ureq = "2"
uuid = { version = "1", features = ["v4", "v5"] }
sdkwork_utils_rust.workspace = true
